--- a/index.html
+++ b/index.html
@@ -15,38 +15,21 @@
 </head>
 
 <body>
-
     <div class="main-container">
         <div class="main wrapper clearfix">
-            <div>
-                <h1>Members<button><i>+</i></button></h1>
+            <div class='members-add-container'>
+                <h1>Members<button><i>+ icon</i></button></h1>
             </div>
             <div id="table-container" class='table-container'>
                 <table id='members-table-main' class="members-table">
-                    <tr>
-                        <th>Team member</th>
-                        <th>Email</th>
-                        <th>Permission level</th>
-                        <button>Trash Icon</button>
-                    </tr>
-                    <tr>
-                        <td><i>Profile pic</i>Erica Badu</td>
-                        <td>e.badu@example.com</td>
-                        <td>Owner</td>
-                    </tr>
-                    <tr>
-                        <td><i>Profile pic</i>Pat Nelsson</td>
-                        <td>p.nelsson@example.com</td>
-                        <td>Admin</td>
-                    </tr>
                 </table>
-                <div>
-                    Your team has <span>5/6</span> active members. <button><i>Bust</i>INVITE</button>
+                <div class='members-active'>
+                    Your team has <span>5/6</span> active members. <button><i>Bust-icon </i>INVITE</button>
                 </div>
             </div>
         </div>
     </div>
-
+    <script src="js/staticData.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 </body>
