Added tests for isAcceptedName

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
     </div>
     <script src="js/staticData.js"></script>
+    <script src="js/helperFunctions.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 </body>
