--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
     </div>
-    <script src="js/staticData.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/helperFunctions.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
