--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="main-container">
         <div class="main wrapper clearfix">
             <div class='members-add-container'>
-                <h1>Members<button><i>+ icon</i></button></h1>
+                <h1>Members<button class='add-member-button' onclick='addRandomMember()'>+</button></h1>
             </div>
             <div id="table-container" class='table-container'>
                 <table id='members-table-main' class="members-table">
