Major styles revamp

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/table-styles.css">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 
@@ -19,7 +19,7 @@
     <div class="main-container">
         <div class="main wrapper clearfix">
             <div class='members-add-container'>
-                <h1>Members<button class='add-member-button' onclick='addRandomMember()'>+</button></h1>
+                <h1>Members</h1><button class='add-member-button' onclick='addRandomMember()'>+</button>
             </div>
             <div id="table-container" class='table-container'>
                 <table id='members-table-main' class="members-table">
