Added active members counter and fixed deletion

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <table id='members-table-main' class="members-table">
                 </table>
                 <div class='members-active'>
-                    Your team has <span>5/6</span> active members. <button><i>Bust-icon </i>INVITE</button>
+                    Your team has <span id='active-members'></span>/<span id='total-members'></span> active members. <button><i>Bust-icon </i>INVITE</button>
                 </div>
             </div>
         </div>
