Calling it a day...

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
     </div>
     <script src="js/data.js"></script>
+    <script src="js/components/memberRow.js"></script>
     <script src="js/helperFunctions.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
